[tool.poetry]
name = "book-maker"
version = "0.1.0"
description = "A tool to convert pdf to books, which can be printed as A5 size on A4 sheets"
authors = ["Uday A S <iamuday1618@gmail.com>"]
readme = "README.md"
packages = [{include = "book_maker"}]

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

